Fixed javadoc generation after removal ant module dependency form istack-tools.
Signed-off-by: Roman Grigoriadi <roman.grigoriadi@oracle.com>